2005-10-04  Ross Burton  <ross@burtonini.com>

	* appearance/:
	Add simple tool to set the font and theme GConf keys.

