@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=Appearance
+Comment=Change the appearance
+Exec=mb-appearance
+Icon=mb-appearance
+Terminal=false
+Type=Application
+Categories=GTK;Settings;DesktopSettings;
+SingleInstance=true
+StartupNotify=true
